generated/checkers/gen/AllGen-Memory-Leak-c8dafb0e4398dacc362832098a04b97da3b0395b/build_logs/syntax-repair-01/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportMissingDrop(const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:124:43: error: unable to deduce ‘const auto*’ from ‘clang::ento::ProgramState::get() const [with T = {anonymous}::MustDropSet; typename clang::ento::ProgramStateTrait<T>::data_type = llvm::ImmutableSet<const clang::ento::MemRegion*>]()’
  124 |   const auto *S = State->get<MustDropSet>();
      |                                           ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:124:43: note:   mismatched types ‘const auto*’ and ‘llvm::ImmutableSet<const clang::ento::MemRegion*>’
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
